--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,7 +22,7 @@
 			<a href="{{ "" | absolute_url }}"><img src="{{ "icon-192x192.png" | relative_url }}" alt="{{ site.posts.last.url | relative_url }}" style="flex-shrink:0; max-height:50px; padding-right:10px"></a>
 			<span style="font-weight:bold;"><a href="{{ "" | absolute_url }}">{{ site.name }}</a>
 				<div style="margin-top:10px; font-size:0.8em;">
-					<a style="margin-left:20px"  href="{{ site.posts.last.url | relative_url }}">About and FAQ</a>
+					<a style="margin-left:20px"  href="{{ site.posts.last.url | relative_url }}">About</a>
 				</div>
 			</span>
 		</div>
