--- a/main.css
+++ b/main.css
@@ -10,6 +10,10 @@ iframe {
   height: 100%;
 }
 
+.media p {
+	font-style:italic;
+}
+
 .placeholder-svg {
   box-sizing: border-box;
   display:block;
