--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,6 +15,8 @@
 </head>
 	
 <body>	
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="S4tJ3X3o"></script>
 	<div id="outersidebar" class="outersidebar">
 	<div class="sidebar">
 	<div class="rpanel" id="accountPanel" tabIndex="-1" onfocus="D('postlist').focus();">		
@@ -54,6 +56,8 @@
 		{{ content }}	
 		</div>
 	</div>	
+	
+	<div class="fb-comments" data-href="https://ansyblenetwork.github.io/solopiano/" data-width="" data-numposts="10"></div>
 </body>	
 
 <script>
