--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,6 +11,7 @@
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 	<meta name="google-site-verification" content="coxUr92sz6JQGiw4brXoZ3HB37p_WhTaLmP0aAWfwrY" />
+	<meta property="fb:admins" content="asp.ansyble"/>
 	{% seo %}
 </head>
 	
