--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="{{ "main.css" | relative_url }}">
 	<link rel="icon" href="{{ "icon-192x192.png" | relative_url }}">
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">		
+	<meta property="fb:admins" content="asp.ansyble"/>
 	{% seo %}
 </head>
 	
@@ -56,7 +57,7 @@
 		{{ content }}	
 		</div>
 		
-	<div class="fb-comments" data-href="https://ansyblenetwork.github.io/solopiano/" data-width="100%" data-numposts="10"></div>
+	<div style="margin-top:20px; margin-bottom:20px" class="fb-comments" data-href="https://ansyblenetwork.github.io/solopiano/" data-width="85%" data-numposts="10"></div>
 	</div>	
 	
 </body>	
