--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -57,7 +57,7 @@
 		{{ content }}	
 		</div>
 		
-	<div style="margin-top:20px; margin-bottom:20px" class="fb-comments" data-href="https://ansyblenetwork.github.io/solopiano/" data-width="85%" data-numposts="10"></div>
+	<div class="fb-comments" data-href="https://ansyblenetwork.github.io/solopiano/" data-width="85%" data-numposts="10"></div>
 	</div>	
 	
 </body>	
