--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -57,12 +57,13 @@
 		{{ content }}	
 		</div>
 		
-	<div class="fb-comments" data-href="https://ansyblenetwork.github.io/solopiano/" data-width="100%" data-numposts="10"></div>
+	<div id="comment"></div>
 	</div>	
 	
 </body>	
 
 <script>
+D('comment').outerHTML = `<div id="comment" class="fb-comments" data-href="${window.location.href}" data-width="100%" data-numposts="10"></div>;`;
 	
 var mobile = false;
 if(D('specialPost')) D('specialPost').scrollIntoView({behavior: "auto", block: "center", inline: "nearest"}); 
