--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -64,6 +64,15 @@
 
 <script>
 D('comment').outerHTML = `<div id="comment" class="fb-comments" data-href="${window.location.href}" data-width="100%" data-numposts="10"></div>`;
+
+var relativelinks = document.getElementsByTagName("a");
+let baseURL = "/" + window.location.pathname.split('/')[1];
+	
+for (let i = 0; i < relativelinks.length; i++) {
+	if (relativelinks[i].href.splice(0, 3) == "/20") {	
+		relativelinks[i].href = baseURL + relativelinks[i].href;
+	}
+}
 	
 var mobile = false;
 if(D('specialPost')) D('specialPost').scrollIntoView({behavior: "auto", block: "center", inline: "nearest"}); 
