--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -69,8 +69,8 @@ var relativelinks = document.getElementsByTagName("a");
 let baseURL = "/" + window.location.pathname.split('/')[1];
 	
 for (let i = 0; i < relativelinks.length; i++) {
-	if (relativelinks[i].href.slice(0, 3) == "/20") {	
-		relativelinks[i].href = baseURL + relativelinks[i].href;
+	if (relativelinks[i].pathname.slice(0, 3) == "/20") {	
+		relativelinks[i].pathname = baseURL + relativelinks[i].pathname;
 	}
 }
 	
