--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -77,7 +77,7 @@ if (baseURL.slice(0, 3) != "/20") {
 }
 	
 var accountName = window.location.host.split('.')[0];
-var filename = window.location.pathname.split('/').slice(1).join('-').slice(1);
+var filename = window.location.pathname.split('/').slice(2).join('-');
 let repoURL = `https://github.com/${accountName}${baseURL}/blob/main/_posts/${filename}.md`;
 	
 var mobile = false;
