--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -33,7 +33,7 @@
 		<ul class="ulsidebar" id="postlist" style="overflow:auto;">
 			{% for post in site.posts %}					
 				{% if page.title == post.title %}	
-					<li id="specialPost" style="background-color:#f4f7f7"><span class="date-format"><a id="repoLink">{{ post.date | date: "%B %-d, %Y" }}</a></span><br>
+					<li id="specialPost" style="background-color:#f4f7f7"><span class="date-format">{{ post.date | date: "%B %-d, %Y" }}</span><br>
 						{{ post.title }}</li>
 				{% else %}				
 					<a href="{{ post.url | relative_url }}"><li><span class="date-format">{{ post.date | date: "%B %-d, %Y" }}</span><br>
@@ -50,7 +50,7 @@
 	<div id="main" class="main">		
 		{% if page.title %}		
 			<h1>{{ page.title }}</h1>
-			<div class="date-format" style="padding-bottom:15px">{{ page.date | date: "%B %-d, %Y" }}</div>
+			<div class="date-format" style="padding-bottom:15px"><a id="repoLink">{{ page.date | date: "%B %-d, %Y" }}</a></div>
 		{% endif %}
 
 		<div class="contentHolder">
