--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -131,7 +131,7 @@ for (let i = 0; i < list.length; i++) {
 		myPreBut.textContent = "Embedded player";
 		let placeHolder = make("div");		
 		placeHolder.style.textAlign = 'center';
-		placeHolder.style.padding = "0.75em";
+		placeHolder.style.margin = "16px";
 		placeHolder.appendChild(myPreBut);
 		holder[i].appendChild(placeHolder);
 		
