--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -133,7 +133,7 @@ for (let i = 0; i < list.length; i++) {
 		
 		// the embed button
 		let myPreBut = make("button");
-		myPreBut.textContent = "Play Youtube clip";
+		myPreBut.textContent = "Youtube clip";
 		let placeHolder = make("div");		
 		placeHolder.style.textAlign = 'center';
 		placeHolder.style.margin = "16px";
