--- a/main.css
+++ b/main.css
@@ -16,10 +16,6 @@ iframe {
   height: 100%;
 }
 
-.media p {
-	font-style:italic;
-}
-
 .placeholder-svg {
   box-sizing: border-box;
   display:block;
@@ -168,6 +164,26 @@ input[type=number] {
   padding-top: 1px;
   padding-bottom: 1px;
   background-color: #f4f7f7;
+}
+
+.media p {
+	font-style:italic;
+}
+
+blockquote {
+  border-radius: 10px;
+  margin-top:10px;
+  margin-bottom:10px;
+  display: block;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  background-color: #f4f7f7;
+}
+
+blockquote p {
+	font-style:italic;
 }
 
 /*-----------*/
