--- a/main.css
+++ b/main.css
@@ -171,14 +171,9 @@ input[type=number] {
 }
 
 blockquote {
+  margin:10px 0px 10px 0px;
+  padding:1px 10px 1px 10px;
   border-radius: 10px;
-  margin-top:10px;
-  margin-bottom:10px;
-  display: block;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 1px;
-  padding-bottom: 1px;
   background-color: #f4f7f7;
 }
 
