--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,12 @@
 	<link rel="stylesheet" type="text/css" href="{{ "main.css" | relative_url }}">
 	<link rel="icon" href="{{ "icon-192x192.png" | relative_url }}">
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">		
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
+	
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+	<meta http-equiv="Pragma" content="no-cache">
+	<meta http-equiv="Expires" content="0">
+	
 	<meta property="fb:admins" content="asp.ansyble"/>
 	{% seo %}
 </head>
