--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -30,7 +30,7 @@
 			<a href="{{ "" | absolute_url }}"><img src="{{ "icon-192x192.png" | relative_url }}" alt="{{ site.posts.last.url | relative_url }}" style="flex-shrink:0; max-height:50px; min-width:50px; padding-right:10px"></a>
 			<span style="font-weight:bold;"><a href="{{ "" | absolute_url }}">{{ site.name }}</a>
 				<div style="margin-top:10px; font-size:0.8em;">
-					<a style="margin-left:20px"  href="{{ site.posts.last.url | relative_url }}">About</a>
+					<a style="margin-left:20px" href="{{ site.posts.last.url | relative_url }}">About</a>
 				</div>
 			</span>
 		</div>
@@ -55,7 +55,7 @@
 	<div id="main" class="main">		
 		{% if page.title %}		
 			<h1>{{ page.title }}</h1>
-			<div class="date-format" style="padding-bottom:15px"><a id="repoLink">{{ page.date | date: "%B %-d, %Y" }}</a></div>
+			<div class="date-format" style="padding-bottom:15px"><a id="repoLink" target="_blank">{{ page.date | date: "%B %-d, %Y" }}</a></div>
 		{% endif %}
 
 		<div class="contentHolder">
