--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ input[type=number] {
 .sidebar li {
   /*margin-bottom:10px;*/
   padding:10px;
-  border-bottom: solid 1px #d4d4d4;
+  /* border-bottom: solid 1px #d4d4d4; */
 }
 
 .sidebar a:hover {
