--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -97,8 +97,7 @@ if (baseURL.slice(0, 3) != "/20") {
 
 // add link to github repository
 var accountName = window.location.host.split('.')[0];
-var filename = window.location.pathname.split('/').slice(2).join('-');
-D('repoLink').href = `https://github.com/${accountName}${baseURL}/blob/main/_posts/${filename}.md`;
+D('repoLink').href = `https://github.com/${accountName}${baseURL}/blob/main/{{page.path}}`;
 
 // adjust display for mobile vs desktop
 var mobile = false;
